# zkp-pocs

./: .gitattributes  .gitignore  Dockerfile  README.md  devbox.json
.github/workflows/: docker-publish.yml
docknetwork/: Cargo.toml  Makefile  README.md
docknetwork/src/: lib.old.rs  lib.rs
docknetwork/src/.ipynb_checkpoints/: lib-checkpoint.rs
docknetwork/tests/: c03_holder_binding.rs  c04_issuer_signature.rs  c05_age_verification.rs  c06_non_revocation.rs  c09_full_proof.rs
noir/: .gitignore  Makefile  README.md  devbox.json  requirements.txt
noir/c03_holder_binding/: Nargo.toml
noir/c03_holder_binding/src/: main.nr
noir/c04_issuer_signature/: Nargo.toml
noir/c04_issuer_signature/src/: main.nr
noir/c05_age_verification/: Nargo.toml
noir/c05_age_verification/src/: main.nr
noir/c06_non_revocation/: Nargo.toml
noir/c06_non_revocation/src/: constants.nr  main.nr
noir/c09_full_proof/: Nargo.toml
noir/c09_full_proof/src/: main.nr
noir/eid/: Nargo.toml
noir/eid/src/: lib.nr
noir/scripts/: 1-create-keys.py  2-create-signed-credentials.py  3-create-provers.py  4-create-witness.sh  5-create-proof.sh  common.py  time_real.sh
